--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,9 +5,12 @@ project(mrr)
 include_directories(include)
 
 #Can manually add the sources using the set command as follows:
-#set(SOURCES src/mainapp.cpp src/Student.cpp)
+#set(SOURCES src/main.cpp)
 
 #However, the file(GLOB...) allows for wildcard additions:
 file(GLOB SOURCES "src/*.cpp")
 
 add_executable(mrr ${SOURCES})
+
+TARGET_LINK_LIBRARIES(mrr pthread)
+TARGET_LINK_LIBRARIES(mrr X11)
